# uz-stomatolog

./: .env.example  .gitignore  README.md  admin-web-service-tz-uz-stomatolog.md  dental_bot_implementation_plan.md  dental_bot_technical_spec.md  index.md  muxlisa-api-integration-guide.md  openai-stt-tts-integration-guide.md  plan.md  yandex_speechkit_tts_telegram_python.md  yandex_speechkit_tts_voice_settings_task.md
apps/bot/: Dockerfile  alembic.ini  pyproject.toml
apps/bot/app/: __init__.py  config.py  logging.py  main.py  tracing.py
apps/bot/app/admin/: audit_repository.py  auth.py  history_repository.py  one_time_links.py  routes.py  settings_reader.py  settings_repository.py
apps/bot/app/agent/: __init__.py  agent.py  tools.py
apps/bot/app/calendar/: __init__.py  availability.py  google_calendar.py
apps/bot/app/clinic_knowledge/: en.md  ru.md  uz.md
apps/bot/app/db/: models.py  repositories.py  session.py
apps/bot/app/graph/: __init__.py  graph.py  intents.py  nodes.py  state.py
apps/bot/app/llm/: __init__.py  crypto.py  manager.py  repository.py
apps/bot/dental_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/bot/tests/: conftest.py  test_admin_history.py  test_admin_notify.py  test_admin_one_time_links.py  test_booking_flow.py  test_calendar_integration.py  test_calendar_sync.py  test_cancel_flow.py  test_clinic_knowledge.py  test_graph_flow.py  test_llm_context.py  test_reminders.py  test_repositories.py  test_reschedule_flow.py  test_restart_flow.py  test_speech.py  test_telegram_base.py  test_text_llm.py  test_tracing.py
(+51 files in other folders)
