[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dental-bot"
version = "0.1.0"
description = "Telegram dental clinic assistant MVP"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.10,<4",
    "alembic>=1.13,<2",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.29,<1",
    "fastapi>=0.111,<1",
    "google-api-python-client>=2.140,<3",
    "google-auth>=2.33,<3",
    "httpx>=0.27,<1",
    "itsdangerous>=2.2,<3",
    "langchain-core>=0.2,<1",
    "langgraph>=0.2,<1",
    "langsmith>=0.1,<1",
    "openai>=1.40,<2",
    "pydantic-settings>=2.4,<3",
    "python-jose[cryptography]>=3.3,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20,<1",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = [
    "clinic_knowledge/*.md",
    "prompts/*.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["app/db/migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/admin/routes.py" = ["E501"]
